# fsanitize-cmake

./: CMakeLists.txt  main.cpp  vcpkg.json  version.h
cmake/: add_to_file_to_build.cmake  clean_vcpkg.cmake  custom_command.cmake  custom_command_and_target.cmake  custom_target.cmake  file_io.cmake  sanitize.cmake  version.cmake  version.cpp.in  warning.cmake  xcode_sign.cmake
